playground/notas_tests/invalid/cmt-01.hulk
/*
COMENTARIO
*/
print(1 + "x");
